2010-01-05  Marcus Brinkmann  <marcus@g10code.de>

	* debug.h (TRACE_LOG5): Add macro.
	* debug.c (_assuan_debug_buffer): Add newline
	* system.c: Add more debug output (conditioned on the compile-time
	DEBUG_SYSIO macro).

2009-12-14  Werner Koch  <wk@g10code.com>

	* assuan.h (ASSUAN_RESPONSE_COMMENT): New.
	* client.c (assuan_client_read_response): Return comment lines.
	(assuan_client_parse_response): Return ASSUAN_RESPONSE_COMMENT.
	(_assuan_read_from_server): Skip comment lines.

2009-12-08  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h (struct assuan_system_hooks): Don't use "namespace" as
	argument name in declaration (C++ keyword).

	* client.c (assuan_client_read_response): Fix linelen.

	* assuan.h (ASSUAN_SPAWN_DETACHED): New macro.
	* assuan-pipe-connect.c (pipe_connect): Calculate spawn_flags from
	flags.

	* assuan.h (assuan_fd_from_posix_fd): Handle invalid fd early.

	* assuan-socket.c (get_nonce): Cast buffer to unsigned.
	(_assuan_sock_connect) [HAVE_W32_SYSTEM]: Drop ctx argument from
	read_port_and_nonce invocation.
	* system.c (assuan_fdopen) [HAVE_W32_SYSTEM]: Fix typo in variable
	name.
	(__assuan_spawn) [HAVE_W32_SYSTEM]: Fix types of fd and fdp.  Use
	ASSUAN_INVALID_FD.  Add missing context argument to _assuan_free,
	and fix call to _assuan_w32_strerror.  Set errno on error.
	(__assuan_socketpair) [HAVE_W32_STRERROR]: Fix type of filedes
	argument.
	* assuan-pipe-connect.c (pipe_connect, assuan_pipe_connect,
	socketpair_connect) [HAVE_W32_SYSTEM]: Fix type of fd_child_list.
	* assuan-defs.h (_assuan_socketpair): Likewise for prototype.
	* assuan.h (assuan_fd_from_posix_fd): New static inline function.

2009-12-03  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-logging.c: (log_cats): New static variable.
	(TEST_LOG_CAT): New macro.
	(_assuan_log_handler): Check log category.
	(assuan_set_assuan_log_stream): Check ASSUAN_DEBUG for logging
	categories.
	(assuan_set_log_stream): Call assuan_set_assuan_log_stream.
