@@ -176,10 +176,10 @@ _assuan_reset (assuan_context_t ctx)
 void
 assuan_release (assuan_context_t ctx)
 {
-  TRACE (ctx, ASSUAN_LOG_CTX, "assuan_release", ctx);
-
   if (! ctx)
     return;
+
+  TRACE (ctx, ASSUAN_LOG_CTX, "assuan_release", ctx);
 
   _assuan_reset (ctx);
   /* None of the members that are our responsibility requires
